syntax = "proto3";
package grpc;

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "EchoServiceProto";


message EchoRequest{
    string message = 1;
}

message EchoResponse{
    string message = 1;
}

message IdResponse{
    int32 id = 1;
}

message AddTestRequest{
    int32 id = 1;
    string name = 2;
}

message AddQuesRequest{
    int32 id = 1;
    int32 testId = 2;
    string name = 3;
}

message AddAnswRequest{
    int32 id = 1;
    string name = 2;
    int32 pointc = 3;
    int32 pointw = 4; 
}

service EchoService{
    rpc addtest(AddTestRequest) returns (IdResponse){}
    rpc addques(AddQuesRequest) returns (IdResponse){}
    rpc addansw(stream AddAnswRequest) returns (IdResponse){}
}
